tests/fixtures/errors/stringlike_violation.z
# E0400: a non-string argument on a StringLike-constrained parameter.
main: function is {
    error msg: 42
}
